feat: chain-heap redesign OP1-OP5 — per-tick RocksDB touches to heap state
All five hot-path stages move running tallies from RocksDB to heap
(same dedup trick): FormingBarBuilder/Detection/Writer slots,
HeapCandleEmitFunction (replaces keyBy->window->aggregate),
HeapPreviewFunction (replaces preview window branch). Candle math
reused byte-for-byte via shared buildRow/aggregate helpers.

Guards: structural bounds (G-CHAIN-1), 65536-slot/16-pending/8-live
fail-closed caps (G-CHAIN-2), five *-v2 uid bumps so pre-redesign
checkpoints fail closed (G-CHAIN-3), loud restored-timer no-ops,
preview interval<=window fail-fast at open.

Trade: crash-restart loses one half-built candle/instrument;
completed candles/signals exact. Restore contract is empty-restart
(CandleRocksDbRestoreIntegrationTest reworked: 48 rows, w23 absent).

Proof run f92ddaa7 (12-min @10Hz + 800 dup/80 late injected):
source 10,249/s (was 4,930), every operator <5% busy (was 32-48%),
ckpts 330/330 p50 1.7s, age p50 197ms, 47,104 closes = 46x1024 exact,
597/600 in-window dups dropped, quarantine 0.